# chunker

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
config/: default.toml
docs/: README.md  api.md  chunking-strategies.md  configuration.md  integration.md
src/: batch.rs  lib.rs  main.rs
src/api/: handlers.rs  mod.rs
src/ast_engine/: entity_extractor.rs  languages.rs  mod.rs  parser.rs  scope_tree.rs
src/chunkers/: agentic_chunker.rs  base.rs  chat_chunker.rs  code_chunker.rs  document_chunker.rs  mod.rs  recursive_chunker.rs  repo_chunker.rs  sentence_chunker.rs  table_chunker.rs  ticketing_chunker.rs  token_chunker.rs
src/enrichment/: context_builder.rs  dependency_parser.rs  mod.rs
src/jobs/: mod.rs  processor.rs  store.rs
src/messaging/: circuit_breaker.rs  consistent_hash.rs  kafka_consumer.rs  kafka_producer.rs  mod.rs  rabbit_client.rs
src/output/: embedding_client.rs  mod.rs  relation_graph_client.rs
src/processing/: file_processor.rs  filter.rs  language.rs  mod.rs
src/router/: mod.rs
src/types/: chunk.rs  config.rs  mod.rs  source.rs
