[package]
name = "chunker"
version = "0.1.0"
edition = "2021"
authors = ["KogSector"]
description = "A high-performance, production-ready chunking service for RAG pipelines"
license = "MIT"
repository = "https://github.com/KogSector/chunker"
keywords = ["chunking", "rag", "nlp", "embedding"]
categories = ["text-processing", "web-programming"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP framework
axum = { version = "0.7", features = ["json", "macros"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Token counting (tiktoken-compatible)
tiktoken-rs = "0.5"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP client for downstream services
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Regex for text processing
regex = "1.10"
lazy_static = "1.4"

# Unicode text processing
unicode-segmentation = "1.10"

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4"
tempfile = "3.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bin]]
name = "chunker"
path = "src/main.rs"

[lib]
name = "chunker"
path = "src/lib.rs"
